# Prediction-Market-Backtester

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
apps/api/: pyproject.toml
apps/api/src/kalshi_backtester_api/: __init__.py  main.py
apps/api/src/kalshi_backtester_api/models/: __init__.py  migration.py
apps/api/src/kalshi_backtester_api/services/: dataset_service.py  migration_service.py  project_scanner.py  upload_service.py
apps/api/tests/: test_api.py  test_migration_service.py
apps/web/: app.js  index.html  package-lock.json  package.json  styles.css
apps/web/scripts/: verify-static-ui.mjs
